# genai-lab

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: daily-summarize.yml  daily-summaze.yml
apps/llm-sampler/: .env.sample  .gitignore  README.md  pyproject.toml
apps/llm-sampler/backend/: llm_providers.py  main.py  schemas.py
apps/llm-sampler/frontend/: app.py
apps/mastra-app/: package.json
apps/my-mcp-server/: package.json  tsconfig.json
apps/tech-summarizer/: package.json
generated_summaries/: 2025-03-29.md  2025-03-30.md
generated_summaries/2025-03-28/: tech-feed.md
generated_summaries/2025-03-30/: tech-feed.md
generated_summaries/2025-03-31/: tech-feed.md
generated_summaries/2025-03-31_1/: tech-feed.md
generated_summaries/2025-04-01/: reddit.md  tech-feed.md
generated_summaries/2025-04-02/: reddit.md  tech-feed.md
generated_summaries/2025-04-03/: reddit.md  tech-feed.md
generated_summaries/2025-04-04/: reddit.md  tech-feed.md
generated_summaries/2025-04-05/: reddit.md  tech-feed.md
generated_summaries/2025-04-06/: github-trending.md  reddit.md  tech-feed.md
generated_summaries/2025-04-07/: reddit.md  tech-feed.md
generated_summaries/2025-04-08/: reddit.md  tech-feed.md
generated_summaries/2025-04-09/: reddit.md  tech-feed.md
generated_summaries/2025-04-10/: reddit.md  tech-feed.md
generated_summaries/2025-04-11/: github-trending.md  reddit.md  tech-feed.md
generated_summaries/2025-04-12/: github-trending.md  (+2 more)
src/: generatePagesArtifact.ts  mcpApp.ts
(+408 files in other folders)
